--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "firebase": "^10.8.0",
+    "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
