--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap-timepicker": "^0.5.2",
     "firebase": "^10.8.0",
     "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-time-picker": "^6.6.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
