Update Firebase configuration

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDIxAJDo0Xl9nvlJmjrHWvE67lglaNfQgk
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=tide-safetynet.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=tide-safetynet
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=tide-safetynet.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=981179515630
-NEXT_PUBLIC_FIREBASE_APP_ID=1:981179515630:web:9e5a1d0505ab799b74a9ff
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-FTMQVQBPE1
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCQgWHPpjc-9Oq8ChMGZtPIR1MNRO3ow0o
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=next-firebase-auth-cfd14.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=next-firebase-auth-cfd14
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=next-firebase-auth-cfd14.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=569771394197
+NEXT_PUBLIC_FIREBASE_APP_ID=1:569771394197:web:2b741878eb4a043941879c
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-J16DYVSLW5
+
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://next-firebase-auth-cfd14-default-rtdb.firebaseio.com/
