--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-timepicker": "^0.5.2",
+    "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
     "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.0",
