--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
