--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-time-picker": "^6.6.0",
+    "react-toastify": "^10.0.4",
     "sass": "^1.70.0"
   },
   "devDependencies": {
